--- a/index.html
+++ b/index.html
@@ -1,90 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polynomial Regression Prediction</title>
-    <style>
-      body{
-        font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
-        margin: 0;
-        padding: 0;
-      }
-      .container{
-        max-width: 600px;
-        margin: 50px auto;
-        padding: 20px;
-        background: white;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      }
-      h1,h2{
-        color: #333;
-      }
-      label{
-        display: block;
-        margin: 10px 0 5px;
-      }
-      input{
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 20px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      button{
-        background-color: #007bff;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      button:hover{
-        background-color: #0056b3;
-      }
-      .results{
-        margin-top: 20px;
-      }
-    </style>
   </head>
   <body>
-    <div class="container">
-      <h1>Polynomial Regression Prediction</h1>
-      <form id="predictionForm">
-        <label for="inputValue">Enter Engine Size:</label>
-        <input type="number" id="inputValue" name="inputValue" placeholder="Enter Size" required />
-        <button type="Submit">Predict</button>
-      </form>
-      <div class="results" id="results"></div>
-    </div>
+    <h1>Polynomial Regression Prediction for CO2 Emission related to Engine Size</h1>
+    <form id="predictionForm">
+      <label for="enginesize">Enter Engine Size:</label>
+      <input type="number" id="enginesize" name="enginesize" placeholder="Enter Size" required><br><br>
+      <button type="button" onclick = "makePrediction()">Predict</button>
+    </form>
+    <h2 id="result"></h2>
     <Script>
-      const API_URL = "https://polynomial-regression-for-co2emission.onrender.com/";
-      document.getElementById("predictionForm").addEventListener("submit", async (event) => {
-        event.preventDefault();
-        const inputValue=document.getElementById("inputValue").value;
+      async function makePrediction(){
+        const enginesize = document.getElementById("enginesize").value;
+        const data = {
+          EngineSize = parseFloat("enginesize")};
         try{
-          const response = await fetch(API_URL,{
-            method: "POST",
-            headers: {"Content-Type":"application/json"},
-            body: JSON.stringify({x_value: parseFloat(inputValue)}),
-          });
+          const response = await fetch("https://polynomial-regression-for-co2emission.onrender.com",
+                                 {
+                                   method: "POST",
+                                   headers: {
+                                     "content-Type": "application/json"
+                                   },
+                                   body: JSON.stringify(data)
+                                 });
+          if(!response.ok){
+            throw new Error("Network response was not ok"+response.statusText);
+          }
+          const result = await response.json();
+          console.log("Prediction Result:",result);
+          console.log(result.prediction);
+          document.getElementById("result").innerText = "Recommended Drug:" +result.prediction;
         }
-        if (!response.ok){
-          throw new Error("Failed to fetch prediction");
+        catch(error)
+        {
+          console.error("Error:", error);
+          document.getElementById("result").innerText = "Error: Unable to get prediction.";
         }
-        const result = await response.json();
-        document.getElementById("results").innerHTML = "
-          <h2>Prediction Result</h2>
-          <p><strong>Input Value:</strong>${inputValue}</p>
-          <p><strong>Predicted Value:</strong>${result.prediction}</p>";
       }
-        catch(error){
-          console.error("Error",error);
-          alert("An error occured. Please try again.");
-        };
-      );
     </Script>
   </body>
-  </html>
+</html>
